Added basic login component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,6 +49,7 @@
             <div style="text-align:center">
               <h1>
                 Welcome to {{title}}!
+                <app-login class="text-center"></app-login>
               </h1>
             </div>
           </div>
