Fixed hook for register

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,10 +47,11 @@
             <p><strong>This is a twelve cell section in a grid-x.</strong> Each of these includes a div.callout element so you can see where the cell are - it's not required at all for the grid.</p>
             
             <div style="text-align:center">
+              <button (click)="canRegister = !canRegister;" class="button secondary">Toggle Register Display</button>
               <h1>
-                Welcome to {{title}}!
-                <app-login class="text-center"></app-login>
+                Welcome to {{title}}!             
               </h1>
+              <app-login [showRegister]="canRegister" class="text-center"></app-login>   
             </div>
           </div>
         </div>
