--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,4 +1,19 @@
 #login {
     width: 500px;
     display: inline-block;
+    margin-top: 200px;
+}
+div.callout {
+  border: 10px solid white;
+  border-radius: 10px;
+}
+
+h1 {
+  font-size: 64px;
+  color: navy;
+  font-family: "Trebuchet MS";
+}
+
+.button {
+  background-color: grey;
 }
