--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,7 +3,7 @@
     MenuFi
   </h1>
   <form (ngSubmit)="true">
-    <label class="text-left">Username
+    <label class="text-left" style="color: white">Username
       <input
         type="text"
         placeholder="user@domain.com"
@@ -13,7 +13,7 @@
         />
     </label>
 
-    <label class="text-left">Password
+    <label class="text-left" style="color: white">Password
       <input
         type="password"
         placeholder="password"
