gave some style to menu page

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,2 +1,6 @@
-<h2>Menu Editing Page</h2>
-<p>This page is under construction.</p>
+<br>
+<br>
+<div class="window">
+    <h2>Menu Editing Page</h2>
+    <p>This page is under construction.</p>
+</div>
