--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -27,9 +27,14 @@
     <span [hidden]="!this.showRegister">
       <button class="button expanded" (click)="register();">Register</button>
     </span>
-    <span [hidden]="!this.showErrorMessage" style="color: white">
-      <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
-      {{this.errorMessage}}
+    <span [hidden]="!this.showMessage" style="color: white">
+      <i [hidden]="!this.isError" class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+      <i [hidden]="this.isError" class="fa fa-check-circle" aria-hidden="true"></i>
+      {{this.message}}
+    </span>
+    <span [hidden]="!this.isLoading || this.showMessage" style="color: white">
+      <i class="fa fa-spinner fa-pulse fa-fw"></i>
+      Loading...
     </span>
   </form>
 </div>
