--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,7 +1,7 @@
 #login {
     width: 500px;
     display: inline-block;
-    margin-top: 200px;
+    margin-top: 150px;
 }
 div.callout {
   background-color: transparent;
@@ -11,7 +11,7 @@ div.callout {
 h1 {
   font-size: 64px;
   color: white;
-  font-family: "Trebuchet MS";
+  font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
 }
 
 .button {
