--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,8 +4,11 @@
     <h2>Menu Editing Page</h2>
     <p>This page is under construction.</p>
 
-    <app-menu-item
-        class="text-left"
-        [menuItemModel]=menuItem *ngFor="let menuItem of menuItemsData | async">
-    </app-menu-item>
+    <div class="grid-container">
+        <div class="grid-x grid-margin-x">
+            <div class="cell medium-12 large-6" *ngFor="let menuItem of menuItemsData | async">
+                <app-menu-item class="text-left" [menuItemModel]=menuItem></app-menu-item>
+            </div>
+        </div>
+    </div>
 </div>
