--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,7 +4,7 @@ div.back {
   padding: 0px;
   margin: 0px;
   min-height: 1080px;
-  background: linear-gradient(red, navy);
+  background: linear-gradient(#f5d376, #545454);
 }
 
 div.primaryCallout {
