--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,7 +1,6 @@
 div.window {
   margin-left: 50px;
   margin-right: 50px;
-  background-color: white;
-  border: 10px solid white;
-  border-radius: 10px;
+  background-color: none;
+  color: white;
 }
