--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <div class="primaryCallout">
-  <div class="menuHeader" style="height: 10px">
+  <div class="menuHeader">
     <ul class="menu">
       <li class="menu-text">MenuFi</li>
       <li><a routerLink="/login" routerLinkActive="active text-center">Login</a></li>
@@ -8,7 +8,7 @@
     </ul>
   </div>
   <div class="back">
-    <div style="text-align:center ; margin-top:30px">
+    <div style="text-align:center;">
       <router-outlet></router-outlet>
     </div>
   </div>
