--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,6 +1,10 @@
 div.window {
   margin-left: 50px;
   margin-right: 50px;
-  background-color: none;
-  color: white;
+  background-color: transparent;
+  color: black;
+}
+
+a.button {
+  margin: 5px 5px 5px 5px;
 }
