Added empty add form

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -19,14 +19,26 @@ div.primaryCallout {
   color: white !important;
 }
 
-.menu a:link, a:visited {
+ul.menu a:link {
   color: #e5e5e5;
 }
 
-.menu a:hover {
+ul.menu a:visited {
+  color: #e5e5e5;
+}
+
+ul.menu a:hover {
   color: #1879db;
 }
 
-.menu a:active {
+ul.menu a:active {
   color: white;
+}
+
+.button.primary {
+  background-color: #335170;
+}
+
+.button.primary:hover {
+  background-color: #1879db;
 }
