Added base content to add form

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
   <h2>
     MenuFi
   </h2>
-  <form (ngSubmit)="true">
+  <form (ngSubmit)="login();">
     <label class="text-left">Username
       <input
         type="text"
@@ -23,9 +23,9 @@
         >
     </label>
 
-    <button class="button primary expanded" type="submit" (click)="login();">Login</button>
+    <button class="button primary expanded" type="submit">Login</button>
     <span [hidden]="!this.showRegister">
-      <button class="button primary expanded" (click)="register();">Register</button>
+      <button class="button primary expanded" type="button" (click)="register();">Register</button>
     </span>
     <span [hidden]="!this.showMessage">
       <i [hidden]="!this.isError" class="fa fa-exclamation-triangle" aria-hidden="true"></i>
