--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -7,7 +7,13 @@
                 <app-menu-item class="text-left" [menuItemModel]=menuItem></app-menu-item>
             </div>
             <div class="cell">
-                <button type="button" class="button primary large expanded" data-open="addModal">Add menu item</button>
+                <button
+                    type="button"
+                    class="button primary large expanded"
+                    data-open="addModal"
+                    (click)="addMenuItemForm.reset()">
+                    Add menu item
+                </button>
             </div>
         </div>
     </div>
@@ -15,13 +21,106 @@
 </div>
 
 <div class="reveal" id="addModal" data-reveal>
-    <div class="grid-x grid-margin-x">
-        <div class="cell">
-            This form is under construction.
+    <form (ngSubmit)="submitCreateMenuItem();" #addMenuItemForm="ngForm">
+        <div class="grid-x grid-margin-x">
+            <div class="cell">
+                <label>Name</label>
+                <input
+                    type="text"
+                    placeholder="Salad"
+                    [(ngModel)]="newName"
+                    name="newName"
+                    required
+                    />
+            </div>
+            <div class="cell">
+                <img src="{{newImageUrl}}" alt="image of menu item" width=150px
+                    onerror="if (this.src != 'assets/placeholder_square.png') this.src = 'assets/placeholder_square.png'"/>
+                <label>Image Url</label>
+                <input
+                    type="text"
+                    placeholder="http://url.to.image.com"
+                    [(ngModel)]="newImageUrl"
+                    name="newImageUrl"
+                    required
+                    />
+            </div>
+            <div class="cell">
+                <div class="grid-x grid-margin-x">
+                    <div class="cell auto">
+                        <label>Description</label>
+                        <input
+                            type="text"
+                            placeholder="Healthy Veggies"
+                            [(ngModel)]="newDescription"
+                            name="newDescription"
+                            required
+                            />
+                    </div>
+                    <div class="cell auto">
+                        <label>Price</label>
+                        <div class="input-group">
+                            <span class="input-group-label"><i class="fa fa-usd"></i></span>
+                            <input
+                                type="number"
+                                placeholder="5.99"
+                                class="input-group-field"
+                                [(ngModel)]="newPrice"
+                                name="newPrice"
+                                required
+                                />
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="cell">
+                <div class="grid-x grid-margin-x">
+                    <div class="cell auto">
+                        <label>Ingredients</label>
+                        <input
+                            *ngFor="let newIngredient of newIngredients; let ingredientIndex = index; trackBy:trackByIndex"
+                            type="text"
+                            name="newIngredient{{ingredientIndex}}"
+                            [(ngModel)]="newIngredients[ingredientIndex]"
+                            required
+                            />
+                        <button type="button" class="primary button expanded" (click)="newIngredients.push('');">Add ingredient</button>
+                    </div>
+                    <div class="cell auto">
+                        <label>Restrictions</label>
+                        <div *ngFor="let newRestrictionMask of newRestrictionsMask; let restrictionIndex = index; trackBy:trackByIndex">
+                            <input
+                                type="checkbox"
+                                id="newRestriction{{restrictionIndex}}"
+                                name="newRestriction{{restrictionIndex}}"
+                                [(ngModel)]="newRestrictionsMask[restrictionIndex]"
+                                required
+                                />
+                            <label for="newRestriction{{restrictionIndex}}">{{this.allRestrictions[restrictionIndex].name}}</label>
+                        </div>
+                        
+                    
+                        <label>Preferences</label>
+                        <div *ngFor="let newPreferenceMask of newPreferencesMask; let preferenceIndex = index; trackBy:trackByIndex">
+                            <input
+                                type="checkbox"
+                                id="newPreference{{preferenceIndex}}"
+                                name="newPreference{{preferenceIndex}}"
+                                [(ngModel)]="newPreferencesMask[preferenceIndex]"
+                                required
+                                />
+                            <label for="newPreference{{preferenceIndex}}">{{this.allPreferences[preferenceIndex].name}}</label>
+                        </div>
+                    </div>
+
+                    
+
+                </div>
+            </div>
+            <div class="cell">
+                <button class="primary button" type="submit" data-close>Add</button>
+                <button class="primary button" type="reset" data-close>Cancel</button>
+            </div>
         </div>
-        <div class="cell">
-            <button class="primary button" type="button" data-close>Add</button>
-            <button class="primary button" type="button" data-close>Cancel</button>
-        </div>
-    </div>
+    </form>
 </div>
