--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -42,3 +42,7 @@ ul.menu a:active {
 .button.primary:hover {
   background-color: #1879db;
 }
+
+.button.primary:disabled, .button.primary:disabled:hover {
+  background-color: #808080
+}
