--- a/src/app/menu/menu-item/menu-item.component.html
+++ b/src/app/menu/menu-item/menu-item.component.html
@@ -120,14 +120,21 @@
                 <div class="grid-x grid-margin-x">
                     <div class="cell medium-8 large-8">
                         <label>Ingredients</label>
-                        <input
-                            *ngFor="let newIngredient of newIngredients; let ingredientIndex = index; trackBy:trackByIndex"
-                            type="text"
-                            name="newIngredient{{ingredientIndex}}"
-                            value="{{newIngredients[ingredientIndex]}}"
-                            [(ngModel)]="newIngredients[ingredientIndex]"
-                            />
+                        <div *ngFor="let newIngredient of newIngredients; let ingredientIndex = index; trackBy:trackByIndex">
+                          <div class="input-group">
+                            <button type="button" class="button secondary input-el" (click)="removeIngredient(ingredientIndex);"><i class="fa fa-times"></i></button>
+                            <input
+                              type="text"
+                              class="input-el"
+                              name="newIngredient{{ingredientIndex}}"
+                              value="{{newIngredients[ingredientIndex]}}"
+                              [(ngModel)]="newIngredients[ingredientIndex]"
+                              required
+                              />
+                          </div>
+                        </div>
                         <button type="button" class="primary button expanded" (click)="newIngredients.push('');">Add ingredient</button>
+                        <button type="button" class="close-button" data-close><i class="fa fa-times"></i></button>
                     </div>
                     <div class="cell auto">
                         <label>Restrictions</label>
@@ -157,7 +164,7 @@
             </div>
             <div class="cell">
                 <button class="primary button" type="submit" data-close [disabled]="!editMenuItemForm.form.valid">Save</button>
-                <button class="primary button" data-close>Cancel</button>
+                <button class="primary button" type="button" data-close>Cancel</button>
             </div>
         </div>
     </form>
