--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -93,13 +93,21 @@
                 <div class="grid-x grid-margin-x">
                     <div class="cell medium-8 large-8">
                         <label>Ingredients</label>
-                        <input
-                            *ngFor="let newIngredient of newIngredients; let ingredientIndex = index; trackBy:trackByIndex"
-                            type="text"
-                            name="newIngredient{{ingredientIndex}}"
-                            [(ngModel)]="newIngredients[ingredientIndex]"
-                            />
+                        <div *ngFor="let newIngredient of newIngredients; let ingredientIndex = index; trackBy:trackByIndex">
+                          <div class="input-group">
+                            <button type="button" class="button secondary input-el" (click)="removeIngredient(ingredientIndex);"><i class="fa fa-times"></i></button>
+                            <input
+                              type="text"
+                              class="input-el"
+                              name="newIngredient{{ingredientIndex}}"
+                              value="{{newIngredients[ingredientIndex]}}"
+                              [(ngModel)]="newIngredients[ingredientIndex]"
+                              required
+                              />
+                          </div>
+                        </div>
                         <button type="button" class="primary button expanded" (click)="newIngredients.push('');">Add ingredient</button>
+                        <button type="button" class="close-button"><i class="fa fa-times" data-close></i></button>
                     </div>
                     <div class="cell auto">
                         <label>Restrictions</label>
