Fixed edit form breaking past 1st submission

--- a/src/app/menu/menu-item/menu-item.component.html
+++ b/src/app/menu/menu-item/menu-item.component.html
@@ -2,7 +2,7 @@
   <div class="card-divider">
     <span class="clearfix">
       <h4>{{this.menuItemModel.name}}</h4>
-      <button type="button" class="button primary float-right" data-open="editModal" (click)="resetEditForm();">Edit</button>
+      <button type="button" class="button primary float-right" (click)="openEditForm();">Edit</button>
     </span>
   </div>
   <div class="card-section">
@@ -45,127 +45,4 @@
       </span>
     </div>
   </div>
-</div>
-
-<div class="reveal" id="editModal" data-reveal>
-    <h2>Edit menu item</h2>
-    <form (ngSubmit)="submitEditMenuItem();" #editMenuItemForm="ngForm">
-        <div class="grid-x grid-margin-x">
-            <div class="cell">
-                <label>Name</label>
-                <input
-                    type="text"
-                    [(ngModel)]="newName"
-                    value="{{newName}}"
-                    name="newName"
-                    required
-                    />
-            </div>
-            <div class="cell">
-                <div class="grid-x grid-margin-x">
-                    <div class="cell medium-4 large-4">
-                        <label>Image Preview</label>
-                        <img src="{{newImageUrl}}" alt="image of menu item"
-                            onerror="if (this.src != 'assets/placeholder_square.png') this.src = 'assets/placeholder_square.png'"/>
-                    </div>
-                    <div class="cell auto">
-                        <label>Calories</label>
-                        <input
-                            type="number"
-                            value="{{newCalories}}"
-                            [(ngModel)]="newCalories"
-                            name="newCalories"
-                            required
-                            />
-                        <label>Price</label>
-                        <div class="input-group">
-                            <span class="input-group-label"><i class="fa fa-usd"></i></span>
-                            <input
-                                type="number"
-                                value="{{newPrice}}"
-                                class="input-group-field"
-                                [(ngModel)]="newPrice"
-                                name="newPrice"
-                                required
-                                />
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="cell">
-                <label>Image Url</label>
-                <input
-                    type="text"
-                    value="{{newImageUrl}}"
-                    [(ngModel)]="newImageUrl"
-                    name="newImageUrl"
-                    required
-                    />
-            </div>
-            <div class="cell">
-                <div class="grid-x grid-margin-x">
-                    <div class="cell auto">
-                        <label>Description</label>
-                        <input
-                            type="text"
-                            value="{{newDescription}}"
-                            [(ngModel)]="newDescription"
-                            name="newDescription"
-                            required
-                            />
-                    </div>
-                </div>
-            </div>
-            <div class="cell">
-                <div class="grid-x grid-margin-x">
-                    <div class="cell medium-8 large-8">
-                        <label>Ingredients</label>
-                        <div *ngFor="let newIngredient of newIngredients; let ingredientIndex = index; trackBy:trackByIndex">
-                          <div class="input-group">
-                            <button type="button" class="button secondary input-el" (click)="removeIngredient(ingredientIndex);"><i class="fa fa-times"></i></button>
-                            <input
-                              type="text"
-                              class="input-el"
-                              name="newIngredient{{ingredientIndex}}"
-                              value="{{newIngredients[ingredientIndex]}}"
-                              [(ngModel)]="newIngredients[ingredientIndex]"
-                              required
-                              />
-                          </div>
-                        </div>
-                        <button type="button" class="primary button expanded" (click)="newIngredients.push('');">Add ingredient</button>
-                        <button type="button" class="close-button" data-close><i class="fa fa-times"></i></button>
-                    </div>
-                    <div class="cell auto">
-                        <label>Restrictions</label>
-                        <div *ngFor="let newRestrictionMask of newRestrictionsMask; let restrictionIndex = index; trackBy:trackByIndex">
-                            <input
-                                type="checkbox"
-                                id="newRestriction{{restrictionIndex}}"
-                                name="newRestriction{{restrictionIndex}}"
-                                value="{{newRestrictionsMask[restrictionIndex]}}"
-                                [(ngModel)]="newRestrictionsMask[restrictionIndex]"
-                                />
-                            <label for="newRestriction{{restrictionIndex}}">{{this.allRestrictions[restrictionIndex].name}}</label>
-                        </div>
-                        <label>Preferences</label>
-                        <div *ngFor="let newPreferenceMask of newPreferencesMask; let preferenceIndex = index; trackBy:trackByIndex">
-                            <input
-                                type="checkbox"
-                                id="newPreference{{preferenceIndex}}"
-                                name="newPreference{{preferenceIndex}}"
-                                value="{{newPreferencesMask[preferenceIndex]}}"
-                                [(ngModel)]="newPreferencesMask[preferenceIndex]"
-                                />
-                            <label for="newPreference{{preferenceIndex}}">{{this.allPreferences[preferenceIndex].name}}</label>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="cell">
-                <button class="primary button" type="submit" data-close [disabled]="!editMenuItemForm.form.valid">Save</button>
-                <button class="primary button" type="button" data-close>Cancel</button>
-            </div>
-        </div>
-    </form>
 </div>
