Added metrics framework

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
       <li class="menu-text">MenuFi</li>
       <li><a routerLink="/login" routerLinkActive="active text-center">Login</a></li>
       <li><a routerLink="/menu" routerLinkActive="active text-center">Menu</a></li>
+      <li><a routerLink="/metrics" routerLinkActive="active text-center">Metric</a></li>
     </ul>
   </div>
   <div class="back">
