--- a/src/app/metrics/metrics-dash/metrics-dash.component.html
+++ b/src/app/metrics/metrics-dash/metrics-dash.component.html
@@ -1,3 +1,5 @@
-<p>
-  metrics-dash works!
-</p>
+<h2>Metrics Dashboard</h2>
+<br>
+<a href="javascript:void(0);" class="button primary" (click)="this.refresh();">Refresh</a>
+<br>
+<app-metric-graph [metrics]=this.metrics></app-metric-graph>
