--- a/src/app/metrics/metrics-dash/metric-graph/metric-graph.component.html
+++ b/src/app/metrics/metrics-dash/metric-graph/metric-graph.component.html
@@ -1,13 +1,30 @@
 <div class="card">
     <div class="card-divider">
       <span class="clearfix">
-        <h4>User Clicks for {{menuItemModel.name}}</h4>
-        <!-- <button type="button" class="button primary float-right" (click)="openEditForm();">Edit</button> -->
+        <!-->TODO: Refactor this title name once multiple items graphed</!-->
+        <h4>User Clicks for {{this.currentMenuItem ? this.currentMenuItem.name : ""}}</h4>
       </span>
     </div>
     <div class="card-section">
-            <div>
-                 <canvas id="myCanvas" #myCanvas>{{ chart }}</canvas>
+      <div class="grid-x grid-margin-x">
+        <div class="cell medium-12 large-2" style="overflow-y:scroll">
+          <form (ngSubmit)="$event.preventDefault();" #selectMenuItemForm="ngForm">
+            <button class="primary button" type="button" (click)="this.updateMetrics();">Update</button>
+            <div *ngFor="let menuItemMask of menuItemMasks; let i = index; trackBy:trackByIndex" style="display:inline-block">
+                <input
+                    type="checkbox"
+                    id="menuItemMask{{i}}"
+                    name="menuItemMask{{i}}"
+                    value="{{menuItemMasks[i]}}"
+                    [(ngModel)]="menuItemMasks[i]"
+                    />
+                <label for="menuItemMask{{i}}">{{this.menuItems[i].name}}</label>
             </div>
+          </form>
+        </div>
+        <div class="cell medium-12 large-10">
+            <canvas id="myCanvas" #myCanvas>{{ chart }}</canvas>
+        </div>
+      </div>
     </div>
 </div>
