--- a/src/app/metrics/metrics-dash/metric-graph/metric-graph.component.html
+++ b/src/app/metrics/metrics-dash/metric-graph/metric-graph.component.html
@@ -7,22 +7,27 @@
     </div>
     <div class="card-section">
       <div class="grid-x grid-margin-x">
-        <div class="cell medium-12 large-2" style="overflow-y:scroll">
+        <div class="cell large-2" style="overflow-y:scroll">
           <form (ngSubmit)="$event.preventDefault();" #selectMenuItemForm="ngForm">
             <button class="primary button" type="button" (click)="this.updateMetrics();">Update</button>
-            <div *ngFor="let menuItemMask of menuItemMasks; let i = index; trackBy:trackByIndex" style="display:inline-block">
+            <br>
+            <span *ngFor="let menuItemMask of menuItemMasks; let i = index; trackBy:trackByIndex" class="clearfix">
+              <span
+                  style="display:inline; padding: 0 10px 0 20px"
+                  class="float-left">
                 <input
-                    type="checkbox"
-                    id="menuItemMask{{i}}"
-                    name="menuItemMask{{i}}"
-                    value="{{menuItemMasks[i]}}"
-                    [(ngModel)]="menuItemMasks[i]"
-                    />
-                <label for="menuItemMask{{i}}">{{this.menuItems[i].name}}</label>
-            </div>
+                  type="checkbox"
+                  id="menuItemMask{{i}}"
+                  name="menuItemMask{{i}}"
+                  value="{{menuItemMasks[i]}}"
+                  [(ngModel)]="menuItemMasks[i]"
+                  />
+              </span>
+              <label for="menuItemMask{{i}}" class="float-left">{{this.menuItems[i].name}}</label>
+            </span>
           </form>
         </div>
-        <div class="cell medium-12 large-10">
+        <div class="cell auto">
             <canvas id="myCanvas" #myCanvas>{{ chart }}</canvas>
         </div>
       </div>
