Added radar graph

--- a/src/app/metrics/metrics-dash/metrics-dash.component.html
+++ b/src/app/metrics/metrics-dash/metrics-dash.component.html
@@ -1,2 +1,3 @@
 <h2>Metrics Dashboard</h2>
+<app-radar-graph [restaurantId]="this.restaurantId"></app-radar-graph>
 <app-metric-graph [restaurantId]="this.restaurantId"></app-metric-graph>
