--- a/src/app/metrics/metrics-dash/radar-graph/radar-graph.component.html
+++ b/src/app/metrics/metrics-dash/radar-graph/radar-graph.component.html
@@ -1,8 +1,7 @@
-<div class="card" >
+<div class="card">
   <div class="card-divider">
     <span class="clearfix">
-      <!-->TODO: Refactor this title name once multiple items graphed</!-->
-      <h4>User Clicks by Type</h4>
+      <h4>All User Clicks for Items by Preference</h4>
     </span>
   </div>
   <div class="card-section">
