Fixed summary graph null length bug

--- a/src/app/metrics/metrics-dash/summary-graph/summary-graph.component.html
+++ b/src/app/metrics/metrics-dash/summary-graph/summary-graph.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="card-section">
       <p style="text-align: left">
-        Total menu items: {{ (menuItems | async).length }}
+        Total menu items: {{ (menuItems | async)?.length }}
         <br>
         Total clicks: {{totalClicks}}
       </p>
